[gd_scene load_steps=12 format=3 uid="uid://y6y6mfgp5afq"]

[ext_resource type="Script" path="res://FrameUI.gd" id="1_2c0dk"]
[ext_resource type="PackedScene" uid="uid://b35lhj5ogfsbj" path="res://frame.tscn" id="2_qnn2i"]
[ext_resource type="Texture2D" uid="uid://c2ir3im71bmdf" path="res://icons/frame_highlight.png" id="3_bx4wd"]
[ext_resource type="Shader" path="res://general_frame_shader.gdshader" id="3_ycyao"]
[ext_resource type="Texture2D" uid="uid://dptm1tyhhmax3" path="res://icons/cross.png" id="4_sx651"]
[ext_resource type="Texture2D" uid="uid://cavuco6gwo8ke" path="res://icons/cross_hover.png" id="5_5j2s2"]
[ext_resource type="FontFile" uid="uid://dyfftw43h1bkw" path="res://Font/ENSADLED-Regular.otf" id="5_xpbdj"]
[ext_resource type="Shader" path="res://suppr_button_shader.gdshader" id="6_hlcxe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yiagi"]
resource_local_to_scene = true
shader = ExtResource("3_ycyao")
shader_parameter/line_thinckness = 0.03
shader_parameter/line_alpha = null
shader_parameter/aspect_ratio = 1.1
shader_parameter/theme_color = null
shader_parameter/alpha = null
shader_parameter/beat_mode = null

[sub_resource type="LabelSettings" id="LabelSettings_k0rso"]
resource_local_to_scene = true
font = ExtResource("5_xpbdj")
font_color = Color(0.392157, 0.392157, 0.392157, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5sqlm"]
resource_local_to_scene = true
shader = ExtResource("6_hlcxe")
shader_parameter/theme_color = Vector3(1, 0, 0)
shader_parameter/line_thinckness = 0.08
shader_parameter/cross_size = 0.2
shader_parameter/hovered = false
shader_parameter/alpha = null
shader_parameter/color_factor = 0.7

[node name="FrameUI" type="Control"]
custom_minimum_size = Vector2(200, 220)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -110.0
offset_right = 100.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_2c0dk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Frame_Margin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.11

[node name="Frame" parent="VBoxContainer/Frame_Margin" instance=ExtResource("2_qnn2i")]
layout_mode = 2
size_flags_horizontal = 1
size_flags_stretch_ratio = 7.0

[node name="highlight" type="TextureRect" parent="VBoxContainer/Frame_Margin/Frame"]
visible = false
material = SubResource("ShaderMaterial_yiagi")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bx4wd")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
size_flags_stretch_ratio = 0.3
label_settings = SubResource("LabelSettings_k0rso")

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[node name="suppr" type="TextureButton" parent="."]
visible = false
material = SubResource("ShaderMaterial_5sqlm")
layout_mode = 2
offset_right = 200.0
offset_bottom = 200.0
texture_normal = ExtResource("4_sx651")
texture_hover = ExtResource("5_5j2s2")
ignore_texture_size = true
stretch_mode = 0

[connection signal="resized" from="VBoxContainer" to="." method="_on_v_box_container_resized"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered" binds= [0]]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited" binds= [0]]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="suppr" to="." method="_on_suppr_mouse_entered"]
[connection signal="mouse_exited" from="suppr" to="." method="_on_button_mouse_exited" binds= [1]]
[connection signal="pressed" from="suppr" to="." method="_on_suppr_pressed"]
